--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -33,13 +33,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Background\n",
+    "Background: \n",
+    "* Frame to event conversion is a technique mostly used to understand the principles of neuromorphic imaging  \n",
     "\n",
-    "Frame to event conversion is a technique mostly used to understand the principles of neuromorphic imaging  \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "“What I cannot create, I do not understand.” Richard Feynman\n",
+    "* “What I cannot create, I do not understand.” Richard Feynman\n",
     "\n",
     "\n",
     "\n",
@@ -55,9 +53,15 @@
     "In the provided dataset is a greyscale video sequence. The aim of this task is to produce an event stream (x, y, p, t), of the recording.\n",
     "\n",
     "# Q1.\n",
-    "Build an algorithm to convert the video sequence to an event stream with a reasonable SNR and high temporal resolution  \n",
+    "Build an algorithm to convert the video sequence to an event stream with a reasonable SNR and high temporal resolution  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "# QX. \n",
+    "# Q2. \n",
     "(15%) Evaluate and briefly justify your algorithms\n"
    ]
   },
