--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -14,6 +14,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It is important not to scare away potential collaborators with poor code, and code management practices.\n",
+    "\n",
+    "### Scary Code Observations:\n",
+    "\n",
+    "* The absence of functions, code is written as one complete monolithic block.\n",
+    "-- Often with lots of nested levels.\n",
+    "\n",
+    "* Highly repetitive code\n",
+    "-- Repeating the same idioms leads to more errors. If you find yourself repeating the same file-reading operations.\n",
+    "\n",
+    "* hard coded numbers in loops\n",
+    "-- Just like in mathematical functions, Its almost always better to express functions in a more general form, even if you can't imagine your code generalizing yet, expect the unexpected.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Submission requirements:\n",
     "\n",
     "All code must be written using Jupyter Notebooks, or Matlab Live Script\n",
@@ -34,7 +58,7 @@
        "\n",
        "            setTimeout(function() {\n",
        "                var nbb_cell_id = 1;\n",
-       "                var nbb_unformatted_code = \" %load_ext nb_black\";\n",
+       "                var nbb_unformatted_code = \"%load_ext nb_black\";\n",
        "                var nbb_formatted_code = \"%load_ext nb_black\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
@@ -112,69 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "claus entered\n",
-      "claus not entered\n",
-      "claus not entered\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 4;\n",
-       "                var nbb_unformatted_code = \"a = 1\\na = True\\na = 'almost anything except...'\\nif a:\\n    print('claus entered')\\n\\nif a==True:\\n    print('claus entered')\\n\\na = None\\na = 0\\n\\nif not a:\\n    print('claus not entered')\\n\\nif a!=True or a==False:\\n    print('claus not entered')\";\n",
-       "                var nbb_formatted_code = \"a = 1\\na = True\\na = \\\"almost anything except...\\\"\\nif a:\\n    print(\\\"claus entered\\\")\\n\\nif a == True:\\n    print(\\\"claus entered\\\")\\n\\na = None\\na = 0\\n\\nif not a:\\n    print(\\\"claus not entered\\\")\\n\\nif a != True or a == False:\\n    print(\\\"claus not entered\\\")\";\n",
-       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
-       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
-       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
-       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
-       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
-       "                        }\n",
-       "                        break;\n",
-       "                    }\n",
-       "                }\n",
-       "            }, 500);\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "a = 1\n",
-    "a = True\n",
-    "a = 'almost anything except...'\n",
-    "if a:\n",
-    "    print('claus entered')\n",
-    "\n",
-    "if a==True:\n",
-    "    print('claus entered')\n",
-    "\n",
-    "a = None\n",
-    "a = 0\n",
-    "\n",
-    "if not a:\n",
-    "    print('claus not entered')\n",
-    "\n",
-    "if a!=True or a==False:\n",
-    "    print('claus not entered')\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -226,6 +187,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note: The following values are considered by the interpreter to mean false:\n",
+    "\n",
+    "        False    None    0    \"\"    ()    []     {}\n",
+    "Short-circuiting behavior in function: any(), all():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "claus entered\n",
+      "claus not entered\n",
+      "claus not entered\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 2;\n",
+       "                var nbb_unformatted_code = \"a = 1\\na = True\\na = 'almost anything except...'\\nif a:\\n    print('claus entered')\\n\\nif a==True:\\n    print('claus entered')\\n\\na = None\\na = 0\\n\\nif not a:\\n    print('claus not entered')\\n\\nif a!=True or a==False:\\n    print('claus not entered')\";\n",
+       "                var nbb_formatted_code = \"a = 1\\na = True\\na = \\\"almost anything except...\\\"\\nif a:\\n    print(\\\"claus entered\\\")\\n\\nif a == True:\\n    print(\\\"claus entered\\\")\\n\\na = None\\na = 0\\n\\nif not a:\\n    print(\\\"claus not entered\\\")\\n\\nif a != True or a == False:\\n    print(\\\"claus not entered\\\")\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "a = True\n",
+    "a = 'almost anything except...'\n",
+    "if a:\n",
+    "    print('claus entered')\n",
+    "\n",
+    "if a==True:\n",
+    "    print('claus entered')\n",
+    "\n",
+    "a = None\n",
+    "a = 0\n",
+    "\n",
+    "if not a:\n",
+    "    print('claus not entered')\n",
+    "\n",
+    "if a!=True or a==False:\n",
+    "    print('claus not entered')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Glob \n",
     "\n",
     "## BASH or `os.system` \n",
@@ -242,7 +276,7 @@
    "metadata": {},
    "source": [
     "# Continuous Integration\n",
-    "* Explain but don't assess.\n",
+    "<!--* Explain but don't assess.-->\n",
     "\n",
     "Continous Integration can now be setup using GitHub actions. Travis and CircleCI where older free tier CI services that you might see around.\n",
     "\n",
@@ -258,12 +292,83 @@
     "\n",
     "### Why is this useful?\n",
     "\n",
-    "* CI signals to other developers how easy it would be to get your package to work as expected.\n",
+    "* CI signals to other developers how easy it would be to get your packaged code to install, and then for it to function as expected after installation.\n",
     "\n",
     "* CI signals to your direct collaborators if your latest code feature is compatible with their code.\n",
     "\n",
-    "* Actually offloads a significant amount of computation from your laptop (30 minute jobs can run in the cloud).\n",
+    "* ... and CI services actually offload a significant amount of computation from your laptop (foinstance 30 minute jobs can run in the cloud).\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/anaconda3/lib/python3.7/site-packages/IPython/nbformat.py:13: ShimWarning: The `IPython.nbformat` package has been deprecated since IPython 4.0. You should import from nbformat instead.\n",
+      "  \"You should import from nbformat instead.\", ShimWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/user/git/LearningGitGitHub/Week8.ipynb\n",
+      "The /home/user/git/LearningGitGitHub/Week8.ipynb Notebook contains 521 words\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/anaconda3/lib/python3.7/site-packages/nbformat/current.py:19: UserWarning: nbformat.current is deprecated.\n",
+      "\n",
+      "- use nbformat for read/write/validate public API\n",
+      "- use nbformat.vX directly to composing notebooks of a particular version\n",
+      "\n",
+      "  \"\"\")\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 3;\n",
+       "                var nbb_unformatted_code = \"import wordcount\\nimport os\\n\\nfilepath = os.getcwd()\\nfilepath += \\\"/Week8.ipynb\\\"\\nword_count = wordcount.get_word_count(filepath)\\nprint(\\\"The {0} Notebook contains {1} words\\\".format(filepath, word_count))\";\n",
+       "                var nbb_formatted_code = \"import wordcount\\nimport os\\n\\nfilepath = os.getcwd()\\nfilepath += \\\"/Week8.ipynb\\\"\\nword_count = wordcount.get_word_count(filepath)\\nprint(\\\"The {0} Notebook contains {1} words\\\".format(filepath, word_count))\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import wordcount\n",
+    "import os\n",
+    "\n",
+    "filepath = os.getcwd()\n",
+    "filepath += \"/Week8.ipynb\"\n",
+    "word_count = wordcount.get_word_count(filepath)\n",
+    "print(\"The {0} Notebook contains {1} words\".format(filepath, word_count))"
    ]
   },
   {
