--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -130,9 +130,53 @@
     "### Simple is better than complex.\n",
     "\n",
     "### Complex is better than complicated.\n",
-    "Readability counts.\n",
+    "#### Readability counts.\n",
     "\n",
     "Rather than building all of its functionality into its core, Python was designed to be highly extensible via modules. This compact modularity has made it particularly popular as a means of adding programmable interfaces to existing applications. Van Rossum's vision of a small core language with a large standard library and easily extensible interpreter stemmed from his frustrations with ABC, which espoused the opposite approach.[40]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionaries\n",
+    "Dictionaries are key value pairs or associative arrays.\n",
+    "\n",
+    "* Utilizing dictionaries can simplify code and improve readability\n",
+    "\n",
+    "* Help you to avoid writing a 2D array.\n",
+    "\n",
+    "* Instead of having a pair of lists, where one list contains the appropriate index into the second list, and the second list contains the items you want to retrieve.\n",
+    "\n",
+    "\n",
+    "* A list is a type of mutable length array in Python. Its very convenient to be able to grow and shrink an array post hoc in your code, however the versatility of Python lists comes at a cost.\n",
+    "\n",
+    "* Numpy arrays are faster than lists.\n",
+    "## List slicing.\n",
+    "```python\n",
+    "last_neuron = neurons[-1]\n",
+    "```\n",
+    "### All items\n",
+    "\n",
+    "```python\n",
+    "all_neurons = neurons[:]\n",
+    "```\n",
+    "### Joining two lists\n",
+    "```python\n",
+    "double_neurons = neuronsa.extend(neuronsb)\n",
+    "double_neurons = neuronsa + neuronsb\n",
+    "```\n",
+    "\n",
+    "### Gotcha\n",
+    "```python\n",
+    "double_neurons = neuronsa.extend(neuronsb)\n",
+    "```\n",
+    "```python\n",
+    "double_neurons = neuronsa.append(neuronsb)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "* Absence of Comments "
    ]
   },
   {
@@ -144,25 +188,13 @@
     "  \n",
     "  \n",
     "print('Named explicitly:')\n",
-    "for name in glob.glob('/home/geeks/Desktop/gfg/data.txt'):\n",
+    "for name in glob.glob('/home/spikes/data.txt'):\n",
     "    print(name)\n",
     "  \n",
     "# Using '*' pattern \n",
     "print('\\nNamed with wildcard *:')\n",
-    "for name in glob.glob('/home/geeks/Desktop/gfg/*'):\n",
-    "    print(name)\n",
-    "  \n",
-    "# Using '?' pattern\n",
-    "print('\\nNamed with wildcard ?:')\n",
-    "for name in glob.glob('/home/geeks/Desktop/gfg/data?.txt'):\n",
-    "    print(name)\n",
-    "  \n",
-    "# Using [0-9] pattern\n",
-    "\n",
-    "print('\\nNamed with wildcard ranges:')\n",
-    "for name in glob.glob('/home/geeks/Desktop/gfg/*[0-9].*'):\n",
-    "    print(name)\n",
-    "```"
+    "for name in glob.glob('/home/spikes/*'):\n",
+    "    print(name)\n"
    ]
   },
   {
